--- a/src/app/view-selector/view-selector.component.html
+++ b/src/app/view-selector/view-selector.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list>
   <a mat-list-item routerLink="players">Players</a>
-  <a mat-list-item href="cities">Cities</a>
+  <a mat-list-item routerLink="cities">Cities</a>
   <a mat-list-item href="#">Bank</a>
 </mat-nav-list>
