navbar: change to button and route to root

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="mat-app-background basic-container">
   <div class="container" [class.is-mobile]="mobileQuery.matches">
     <mat-toolbar color="primary" class="toolbar">
-        <h1 class="app-name">{{ title }}</h1>
+      <a class="mat-focus-indicator mat-button app-name" routerLink="">{{ title }}</a>
     </mat-toolbar>
     <div class="content-container">
       <div class="content">
