city.component.ts: add value calculation
Also reorder elements on page.

--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -23,18 +23,19 @@
            [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
         <div class="trade-details">
           <div class="trade-direction">
-            <mat-radio-group aria-label="Trade direction">
+            <mat-radio-group aria-label="Trade direction" [(ngModel)]="tradeDirection">
               <mat-radio-button value="buy">Buy</mat-radio-button>
               <mat-radio-button value="sell">Sell</mat-radio-button>
             </mat-radio-group>
           </div>
           <div class="trade-amount">
-            <mat-form-field>
+            <mat-form-field appearance="fill">
               <mat-label>Amount</mat-label>
               <input matInput type="number" [(ngModel)]="amount">
             </mat-form-field>
             <mat-slider thumbLabel min="0" max="100" color="primary" [(value)]="amount"></mat-slider>
           </div>
+          <div class="calculated-value">Value: {{ getValue(element) }}</div>
           <button mat-flat-button color="primary">Trade</button>
         </div>
       </div>
