--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -2,52 +2,94 @@
 
 <app-players inline="false"></app-players>
 
-<table mat-table *ngIf="dataSource" [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name | titlecase}} </td>
-  </ng-container>
-  <ng-container matColumnDef="buy_price">
-    <th mat-header-cell *matHeaderCellDef> Buy Price </th>
-    <td mat-cell *matCellDef="let element"> {{element.buy_price}} </td>
-  </ng-container>
-  <ng-container matColumnDef="sell_price">
-    <th mat-header-cell *matHeaderCellDef> Sell Price </th>
-    <td mat-cell *matCellDef="let element"> {{element.sell_price}} </td>
-  </ng-container>
+<mat-tab-group mat-stretch-tabs dynamicHeight class="example-stretched-tabs mat-elevation-z4">
+  <mat-tab label="Trade">
+    <table mat-table *ngIf="dataSource" [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name | titlecase}} </td>
+      </ng-container>
+      <ng-container matColumnDef="buy_price">
+        <th mat-header-cell *matHeaderCellDef> Buy Price </th>
+        <td mat-cell *matCellDef="let element"> {{element.buy_price}} </td>
+      </ng-container>
+      <ng-container matColumnDef="sell_price">
+        <th mat-header-cell *matHeaderCellDef> Sell Price </th>
+        <td mat-cell *matCellDef="let element"> {{element.sell_price}} </td>
+      </ng-container>
 
-  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-      <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div class="trade-details">
-          <p *ngIf="this.player.currentPlayer">Money: {{ getMoney() }}</p>
-          <p *ngIf="this.player.currentPlayer">Owned: {{ getOwned(element) }}</p>
-          <div class="trade-direction">
-            <mat-radio-group aria-label="Trade direction" [(ngModel)]="tradeDirection" (change)="setMaxAmount(element)">
-              <mat-radio-button value="buy">Buy</mat-radio-button>
-              <mat-radio-button value="sell">Sell</mat-radio-button>
-            </mat-radio-group>
+      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+          <div class="example-element-detail"
+               [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="trade-details">
+              <p *ngIf="this.player.currentPlayer">Money: {{ getMoney() }}</p>
+              <p *ngIf="this.player.currentPlayer">Owned: {{ getOwned(element) }}</p>
+              <div class="trade-direction">
+                <mat-radio-group aria-label="Trade direction" [(ngModel)]="tradeDirection" (change)="setMaxAmount(element)">
+                  <mat-radio-button value="buy">Buy</mat-radio-button>
+                  <mat-radio-button value="sell">Sell</mat-radio-button>
+                </mat-radio-group>
+              </div>
+              <div class="trade-amount">
+                <mat-form-field appearance="fill">
+                  <mat-label>Amount</mat-label>
+                  <input matInput type="number" [(ngModel)]="amount" min="0" [max]="maxAmount">
+                </mat-form-field>
+                <mat-slider thumbLabel min="0" [max]="maxAmount"  color="primary" [(ngModel)]="amount"></mat-slider>
+              </div>
+              <div class="calculated-value">Value: {{ getValue(element) }}</div>
+              <button mat-flat-button color="primary" (click)="trade(element)">Trade</button>
+            </div>
           </div>
-          <div class="trade-amount">
-            <mat-form-field appearance="fill">
-              <mat-label>Amount</mat-label>
-              <input matInput type="number" [(ngModel)]="amount" [max]="maxAmount">
-            </mat-form-field>
-            <mat-slider thumbLabel min="0" [max]="maxAmount"  color="primary" [(ngModel)]="amount"></mat-slider>
-          </div>
-          <div class="calculated-value">Value: {{ getValue(element) }}</div>
-          <button mat-flat-button color="primary" (click)="trade(element)">Trade</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="city-table-header"></tr>
+      <tr mat-row *matRowDef="let element; columns: displayedColumns"
+               class="example-element-row"
+               [class.example-expanded-row]="expandedElement === element"
+               (click)="toggleDetails(element)"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    </table>
+  </mat-tab>
+
+  <mat-tab label="Rob">
+    <div class="mat-tab-content">
+      <mat-form-field appearance="fill">
+        <mat-label>Robbed player code</mat-label>
+        <input matInput type="text" [(ngModel)]="robbedPlayerCode">
+      </mat-form-field>
+      <mat-radio-group aria-label="Rob type" [(ngModel)]="robType">
+        <mat-radio-button value="money">Money</mat-radio-button>
+        <mat-radio-button value="items">Items</mat-radio-button>
+      </mat-radio-group>
+      <button mat-flat-button color="primary" (click)="rob()">Rob</button>
+    </div>
+  </mat-tab>
+
+  <mat-tab label="Gift">
+    <div class="mat-tab-content">
+      <mat-form-field appearance="fill">
+        <mat-label>Gifted player code</mat-label>
+        <input matInput type="text" [(ngModel)]="giftedPlayerCode">
+      </mat-form-field>
+      <div *ngIf="player?.currentPlayer">
+        <mat-form-field appearance="fill">
+          <mat-label>Money</mat-label>
+          <input matInput type="number" [(ngModel)]="giftedMoney" min="0" [max]="getMoney()">
+        </mat-form-field>
+        <mat-slider thumbLabel min="0" [max]="getMoney()"  color="primary" [(ngModel)]="giftedMoney"></mat-slider>
+        <div *ngFor="let item of player?.currentPlayer?.items | keyvalue">
+          <mat-form-field appearance="fill">
+            <mat-label>{{ item.key | titlecase }}</mat-label>
+            <input matInput type="number" min="0" max="{{ item.value }}" [(ngModel)]="giftedItems[item.key]">
+          </mat-form-field>
+          <mat-slider thumbLabel min="0" max="{{ item.value }}"  [(ngModel)]="giftedItems[item.key]" color="primary"></mat-slider>
         </div>
       </div>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns" class="city-table-header"></tr>
-  <tr mat-row *matRowDef="let element; columns: displayedColumns"
-           class="example-element-row"
-           [class.example-expanded-row]="expandedElement === element"
-           (click)="toggleDetails(element)"></tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-</table>
+      <button mat-flat-button color="primary" (click)="gift()">Gift</button>
+    </div>
+  </mat-tab>
+</mat-tab-group>
