--- a/src/app/city/city.component.scss
+++ b/src/app/city/city.component.scss
@@ -59,3 +59,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 .calculated-value {
   margin: 0 0 16px 0;
 }
+
+.mat-tab-content {
+  padding: 16px;
+}
