--- a/src/app/bank/bank.component.scss
+++ b/src/app/bank/bank.component.scss
@@ -48,3 +48,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 .mat-tab-content {
   padding: 16px;
 }
+
+.loan-spacer {
+  flex: 1 1 auto;
+}
