--- a/src/app/bank/bank.component.scss
+++ b/src/app/bank/bank.component.scss
@@ -47,6 +47,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 
 .mat-tab-content {
   padding: 16px;
+  text-align: center;
 }
 
 .loan-spacer {
