--- a/src/app/bank/bank.component.html
+++ b/src/app/bank/bank.component.html
@@ -23,7 +23,15 @@
 
   <mat-tab label="End">
     <div class="mat-tab-content">
-      <button mat-flat-button color="primary">End</button>
+      <button mat-flat-button color="primary" (click)="prepareDataSource()">End</button>
     </div>
+    <mat-accordion>
+      <mat-expansion-panel role="listitem" *ngFor="let element of dataSource">
+        <mat-expansion-panel-header>
+          <mat-panel-title>{{element.player}} final money: {{element.final_money}}</mat-panel-title>
+        </mat-expansion-panel-header>
+        <p>details</p>
+      </mat-expansion-panel>
+    </mat-accordion>
   </mat-tab>
 </mat-tab-group>
