add login and user-menu components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <a class="mat-focus-indicator mat-button app-name" routerLink="">{{ title }}</a>
       <span class="spacer"></span>
       <app-round-counter></app-round-counter>
+      <app-user-menu></app-user-menu>
     </mat-toolbar>
     <div class="content-container">
       <div class="content">
