--- a/src/app/user-menu/user-menu.component.html
+++ b/src/app/user-menu/user-menu.component.html
@@ -1,6 +1,6 @@
 <div>
-  <button mat-button [matMenuTriggerFor]="userMenu">
-    <mat-icon>account_circle</mat-icon>
+  <button mat-icon-button [matMenuTriggerFor]="userMenu">
+    <mat-icon>settings</mat-icon>
   </button>
 </div>
 <mat-menu #userMenu="matMenu" xPosition="before" yPosition="below">
