settings.component: add api root setter component
This required a rework of the api.service.
Now the apiRoot is a BehaviorSubject, and
the apiRoot is only used via getApiRoot(),
which returns a localStorage item.

--- a/src/app/user-menu/user-menu.component.html
+++ b/src/app/user-menu/user-menu.component.html
@@ -4,7 +4,11 @@
   </button>
 </div>
 <mat-menu #userMenu="matMenu" xPosition="before" yPosition="below">
-  <button mat-menu-item (click)="openDialog()" *ngIf="!isLoggedIn()">
+  <button mat-menu-item (click)="openSettingsDialog()">
+    <mat-icon>cloud</mat-icon>
+    <span>Settings</span>
+  </button>
+  <button mat-menu-item (click)="openLoginDialog()" *ngIf="!isLoggedIn()">
     <mat-icon>login</mat-icon>
     <span>Login</span>
   </button>
