--- a/src/app/players/players.component.scss
+++ b/src/app/players/players.component.scss
@@ -1,11 +1,11 @@
 .player-search-field {
   width: 200px;
-  margin-right: 15px;
+  margin: 0 15px 0 0;
 }
 
 .player-search {
-  width: 300px;
-  margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .player-title {
