--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -57,6 +57,7 @@
 
   <mat-tab label="Rob">
     <div class="mat-tab-content">
+      <p>The above selected player is the robber.</p>
       <mat-form-field appearance="fill">
         <mat-label>Robbed player code</mat-label>
         <input matInput type="text" [(ngModel)]="robbedPlayerCode">
@@ -74,6 +75,7 @@
 
   <mat-tab label="Gift">
     <div class="mat-tab-content">
+      <p>The above selected player is the donor.</p>
       <mat-form-field appearance="fill">
         <mat-label>Gifted player code</mat-label>
         <input matInput type="text" [(ngModel)]="giftedPlayerCode">
