--- a/src/app/scanner/scanner.component.html
+++ b/src/app/scanner/scanner.component.html
@@ -2,5 +2,5 @@
   <zxing-scanner (scanSuccess)="writeQrCode($event)" ></zxing-scanner>
 </div>
 <div class="close_button">
-  <button mat-button color="primary" (click)="dialogRef.close()">Close</button>
+  <button mat-button color="primary" (click)="dialogRef.close()" i18n="@@Close">Close</button>
 </div>
