--- a/src/app/view-selector/view-selector.component.html
+++ b/src/app/view-selector/view-selector.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="players">Players</a>
-  <a mat-list-item routerLink="cities">Cities</a>
-  <a mat-list-item routerLink="bank">Bank</a>
+  <a mat-list-item routerLink="players" i18n="@@Players">Players</a>
+  <a mat-list-item routerLink="cities" i18n="@@Cities">Cities</a>
+  <a mat-list-item routerLink="bank" i18n="@@Bank">Bank</a>
 </mat-nav-list>
