--- a/src/app/bank/bank.component.html
+++ b/src/app/bank/bank.component.html
@@ -1,34 +1,34 @@
 <h1 class="city-title">Bank</h1>
 
 <mat-tab-group mat-stretch-tabs dynamicHeight class="example-stretched-tabs mat-elevation-z4">
-  <mat-tab label="Loan">
+  <mat-tab label="Loan" i18n-label="@@Loan">
     <div class="mat-tab-content">
       <app-players [inline]="true" (playerReady)="getLoans()"></app-players>
       <div *ngIf="player?.currentPlayer" class="player-loans">
-        <button mat-flat-button color="primary" (click)="getNewLoan()">Get new loan</button>
+        <button mat-flat-button color="primary" (click)="getNewLoan()" i18n="@@get_new_loan">Get new loan</button>
         <mat-accordion>
           <mat-expansion-panel role="listitem" *ngFor="let loan of loans">
             <mat-expansion-panel-header>
               <mat-panel-title>
-                <span [ngStyle]="{'text-decoration': loan.payback ? 'line-through': 'none'}">Borrowed {{ loan.amount }} in round {{ loan.round }}</span>
+                <span [ngStyle]="{'text-decoration': loan.payback ? 'line-through': 'none'}" i18n="borrowed_amount">Borrowed {{ loan.amount }} in round {{ loan.round }}</span>
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <p *ngIf="loan.payback">Paid back {{ loan.payback?.payback_amount }} in round {{ loan.payback?.round?.number }}</p>
-            <button *ngIf="!loan.payback" mat-flat-button color="primary" (click)="payback(loan)">Pay back</button>
+            <p *ngIf="loan.payback" i18n="@@payback_info">Paid back {{ loan.payback?.payback_amount }} in round {{ loan.payback?.round?.number }}</p>
+            <button *ngIf="!loan.payback" mat-flat-button color="primary" (click)="payback(loan)" i18n="pay_back">Pay back</button>
           </mat-expansion-panel>
         </mat-accordion>
       </div>
     </div>
   </mat-tab>
 
-  <mat-tab label="End">
+  <mat-tab label="End" i18n-label="@@End">
     <div class="mat-tab-content">
-      <button mat-flat-button color="primary" (click)="prepareDataSource()">End</button>
+      <button mat-flat-button color="primary" (click)="prepareDataSource()" i18n="@@End">End</button>
     </div>
     <mat-accordion>
       <mat-expansion-panel role="listitem" *ngFor="let element of dataSource">
         <mat-expansion-panel-header>
-          <mat-panel-title>{{element.player}} final money: {{element.final_money}}</mat-panel-title>
+          <mat-panel-title i18n="@@final_money">{{element.player}} final money: {{element.final_money}}</mat-panel-title>
         </mat-expansion-panel-header>
         <p>details</p>
       </mat-expansion-panel>
