--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -3,18 +3,18 @@
 <app-players inline="false"></app-players>
 
 <mat-tab-group mat-stretch-tabs dynamicHeight class="example-stretched-tabs mat-elevation-z4">
-  <mat-tab label="Trade">
+  <mat-tab label="Trade" i18n-label="@@Trade">
     <table mat-table *ngIf="dataSource" [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef i18n="@@Name">Name</th>
         <td mat-cell *matCellDef="let element"> {{element.name | titlecase}} </td>
       </ng-container>
       <ng-container matColumnDef="buy_price">
-        <th mat-header-cell *matHeaderCellDef> Buy Price </th>
+        <th mat-header-cell *matHeaderCellDef i18n="@@BuyPrice">Buy Price</th>
         <td mat-cell *matCellDef="let element"> {{element.buy_price}} </td>
       </ng-container>
       <ng-container matColumnDef="sell_price">
-        <th mat-header-cell *matHeaderCellDef> Sell Price </th>
+        <th mat-header-cell *matHeaderCellDef i18n="@@SellPrice">Sell Price</th>
         <td mat-cell *matCellDef="let element"> {{element.sell_price}} </td>
       </ng-container>
 
@@ -24,23 +24,23 @@
           <div class="example-element-detail"
                [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
             <div class="trade-details">
-              <p *ngIf="this.player.currentPlayer">Money: {{ getMoney() }}</p>
-              <p *ngIf="this.player.currentPlayer">Owned: {{ getOwned(element) }}</p>
+              <p *ngIf="this.player.currentPlayer" i18n="@@money_with_amount">Money: {{ getMoney() }}</p>
+              <p *ngIf="this.player.currentPlayer" i18n="@@owned_with_amounts">Owned: {{ getOwned(element) }}</p>
               <div class="trade-direction">
-                <mat-radio-group aria-label="Trade direction" [(ngModel)]="tradeDirection" (change)="setMaxAmount(element)">
-                  <mat-radio-button value="buy">Buy</mat-radio-button>
-                  <mat-radio-button value="sell">Sell</mat-radio-button>
+                <mat-radio-group i18n-aria-label="@@TradeDirection" aria-label="Trade direction" [(ngModel)]="tradeDirection" (change)="setMaxAmount(element)">
+                  <mat-radio-button value="buy" i18n="@@Buy">Buy</mat-radio-button>
+                  <mat-radio-button value="sell" i18n="@@Sell">Sell</mat-radio-button>
                 </mat-radio-group>
               </div>
               <div class="trade-amount">
                 <mat-form-field appearance="fill">
-                  <mat-label>Amount</mat-label>
+                  <mat-label i18n="@@Amount">Amount</mat-label>
                   <input matInput type="number" [(ngModel)]="amount" min="0" [max]="maxAmount">
                 </mat-form-field>
                 <mat-slider thumbLabel min="0" [max]="maxAmount"  color="primary" [(ngModel)]="amount"></mat-slider>
               </div>
-              <div class="calculated-value">Value: {{ getValue(element) }}</div>
-              <button mat-flat-button color="primary" (click)="trade(element)">Trade</button>
+              <div class="calculated-value" i18n="@@value_with_value">Value: {{ getValue(element) }}</div>
+              <button mat-flat-button color="primary" (click)="trade(element)" i18n="@@Trade">Trade</button>
             </div>
           </div>
         </td>
@@ -55,37 +55,37 @@
     </table>
   </mat-tab>
 
-  <mat-tab label="Rob">
+  <mat-tab label="Rob" i18n-label="@@Rob">
     <div class="mat-tab-content">
-      <p>The above selected player is the robber.</p>
+      <p i18n>The above selected player is the robber.</p>
       <mat-form-field appearance="fill">
-        <mat-label>Robbed player code</mat-label>
+        <mat-label i18n>Robbed player code</mat-label>
         <input matInput type="text" [(ngModel)]="robbedPlayerCode">
-        <button mat-button color="primary" matSuffix mat-icon-button aria-label="Read QR code" (click)="openScannerDialog(ePlayerCodeType.Robbed)">
+        <button mat-button color="primary" matSuffix mat-icon-button i18n-aria-label="@@ReadQRCode" aria-label="Read QR code" (click)="openScannerDialog(ePlayerCodeType.Robbed)">
           <mat-icon>photo_camera</mat-icon>
         </button>
       </mat-form-field>
-      <mat-radio-group aria-label="Rob type" [(ngModel)]="robType">
-        <mat-radio-button value="money">Money</mat-radio-button>
-        <mat-radio-button value="items">Items</mat-radio-button>
+      <mat-radio-group i18n-aria-label="@@RobType" aria-label="Rob type" [(ngModel)]="robType">
+        <mat-radio-button value="money" i18n="@@Money">Money</mat-radio-button>
+        <mat-radio-button value="items" i18n="@@Items">Items</mat-radio-button>
       </mat-radio-group>
-      <button mat-flat-button color="primary" (click)="rob()">Rob</button>
+      <button mat-flat-button color="primary" (click)="rob()" i18n="@@Rob">Rob</button>
     </div>
   </mat-tab>
 
-  <mat-tab label="Gift">
+  <mat-tab label="Gift" i18n-label="@@Gift">
     <div class="mat-tab-content">
-      <p>The above selected player is the donor.</p>
+      <p i18n>The above selected player is the donor.</p>
       <mat-form-field appearance="fill">
-        <mat-label>Gifted player code</mat-label>
+        <mat-label i18n>Gifted player code</mat-label>
         <input matInput type="text" [(ngModel)]="giftedPlayerCode">
-        <button mat-button color="primary" matSuffix mat-icon-button aria-label="Read QR code" (click)="openScannerDialog(ePlayerCodeType.Gifted)">
+        <button mat-button color="primary" matSuffix mat-icon-button i18n-aria-label="@@ReadQRCode" aria-label="Read QR code" (click)="openScannerDialog(ePlayerCodeType.Gifted)">
           <mat-icon>photo_camera</mat-icon>
         </button>
       </mat-form-field>
       <div *ngIf="player?.currentPlayer">
         <mat-form-field appearance="fill">
-          <mat-label>Money</mat-label>
+          <mat-label i18n="@@Money">Money</mat-label>
           <input matInput type="number" [(ngModel)]="giftedMoney" min="0" [max]="getMoney()">
         </mat-form-field>
         <mat-slider thumbLabel min="0" [max]="getMoney()"  color="primary" [(ngModel)]="giftedMoney"></mat-slider>
@@ -97,7 +97,7 @@
           <mat-slider thumbLabel min="0" max="{{ item.value }}"  [(ngModel)]="giftedItems[item.key]" color="primary"></mat-slider>
         </div>
       </div>
-      <button mat-flat-button color="primary" (click)="gift()">Gift</button>
+      <button mat-flat-button color="primary" (click)="gift()" i18n="@@Gift">Gift</button>
     </div>
   </mat-tab>
 </mat-tab-group>
