--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,21 +1,21 @@
-<h1 *ngIf="currentPlayer" class="player-title">Player: {{currentPlayer.code}}</h1>
+<h1 *ngIf="currentPlayer" class="player-title" i18n="@@Player">Player: {{currentPlayer.code}}</h1>
 
 <mat-tab-group *ngIf="currentPlayer" mat-stretch-tabs dynamicHeight class="example-stretched-tabs mat-elevation-z4">
-  <mat-tab label="Valuables">
+  <mat-tab label="Valuables" i18n-label="@@Valuables">
     <mat-table *ngIf="currentPlayer" [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef i18n="@@Name">Name</mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.name | titlecase}} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="value">
-        <mat-header-cell *matHeaderCellDef> Value </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef i18n="@@Value">Value</mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.value}} </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns" class="player-table-header"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
   </mat-tab>
-  <mat-tab label="QR code">
+  <mat-tab label="QR code" i18n-label="@@QRcode">
     <div class="qr-code-container">
       <ngx-kjua [text]="currentPlayer.code" [size]="400"></ngx-kjua>
     </div>
