locales: add hungarian translation
Also add hungarian build configuration.

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -5,7 +5,7 @@
     </mat-form-field>
     <div class="form-buttons">
       <button mat-flat-button color="primary"
-                (click)="setServer()">Set</button>
+                (click)="setServer()" i18n="@@Set">Set</button>
       <button mat-button color="primary" (click)="dialogRef.close()" i18n="@@Close">Close</button>
       <button mat-button color="primary" (click)="clearServer()" i18n="@@Clear">Clear</button>
     </div>
