--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -6,3 +6,9 @@
   display: flex;
   justify-content: center;
 }
+
+.mat-header-cell {
+  color: black;
+  font-size: 14px;
+  font-weight: normal;
+}
